--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     */
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
+
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 }
 
 tasks.named('test') {
